--- a/locales/th.json
+++ b/locales/th.json
@@ -232,6 +232,6 @@
 	"screen-report-dealer-register-detail": " ",
 	"New Orders": "คำสั่งซื้อใหม่",
 	"Order History": "ประวัติคำสั่งซื้อ",
-	"Remax Wallet": "กระเป๋าเงิน",
+	"Remax Wallet": "กระเป๋าเงินออนไลน์",
 	"More Info": "รายละเอียดเพิ่มเติม"
 }
