--- a/locales/en.json
+++ b/locales/en.json
@@ -230,5 +230,6 @@
 	"New Orders": "New Orders",
 	"Order History": "Order History",
 	"Remax Wallet": "Remax Wallet",
-	"More Info": "More Info"
+	"More Info": "More Info",
+	"News": "News"
 }
