--- a/locales/th.json
+++ b/locales/th.json
@@ -233,5 +233,6 @@
 	"New Orders": "คำสั่งซื้อใหม่",
 	"Order History": "ประวัติคำสั่งซื้อ",
 	"Remax Wallet": "กระเป๋าเงินออนไลน์",
-	"More Info": "รายละเอียดเพิ่มเติม"
+	"More Info": "รายละเอียดเพิ่มเติม",
+	"News": "ข้อมูลข่าวสาร"
 }
