--- a/locales/th.json
+++ b/locales/th.json
@@ -234,5 +234,6 @@
 	"Order History": "ประวัติคำสั่งซื้อ",
 	"Remax Wallet": "กระเป๋าเงินออนไลน์",
 	"More Info": "รายละเอียดเพิ่มเติม",
-	"News": "ข้อมูลข่าวสาร"
+	"News": "ข้อมูลข่าวสาร",
+	"Awaiting Payment": "รอการแจ้งชำระเงิน"
 }
