--- a/locales/en.json
+++ b/locales/en.json
@@ -231,5 +231,7 @@
 	"Order History": "Order History",
 	"Remax Wallet": "Remax Wallet",
 	"More Info": "More Info",
-	"News": "News"
+	"News": "News",
+	"Awaiting Payment": "Awaiting Payment",
+	"Awaiting Stock": "Awaiting Stock"
 }
