--- a/locales/th.json
+++ b/locales/th.json
@@ -235,5 +235,6 @@
 	"Remax Wallet": "กระเป๋าเงินออนไลน์",
 	"More Info": "รายละเอียดเพิ่มเติม",
 	"News": "ข้อมูลข่าวสาร",
-	"Awaiting Payment": "รอการแจ้งชำระเงิน"
+	"Awaiting Payment": "รอการแจ้งชำระเงิน",
+	"Awaiting Stock": "รอเตรียมสินค้าเพื่อจัดส่ง"
 }
